gcc/testsuite/gdc.test/fail_compilation/bug5b.d
// REQUIRED_ARGS:

int test1()
{
}

